testsuite/tests/module/mod81.stderr

mod81.hs:3:16: error:
    Module ‘Prelude’ does not export ‘Either(Foo)’
